# ubibot-AirSwitch

./: CMakeLists.txt  sdkconfig  sdkconfig.old
.vscode-2/: settings.json  tasks.json
components/E2prom/: E2prom.c
components/E2prom/include/: E2prom.h
components/HLW8112/: CMakeLists.txt  HLW8112.c  HLW8112.h
components/Http/: CMakeLists.txt  Http.c
components/Http/include/: Http.h
components/Json_parse/: CMakeLists.txt  Json_parse.c
components/Json_parse/include/: Json_parse.h
components/Led/: CMakeLists.txt  Led.c
components/Led/include/: Led.h
components/My_Mqtt/: CMakeLists.txt  My_Mqtt.c
components/Smartconfig/: CMakeLists.txt  Smartconfig.c
components/Smartconfig/include/: Smartconfig.h
components/Switch/: CMakeLists.txt  Switch.c
components/Switch/include/: Switch.h
components/Uart0/: Uart0.c
components/my_base64/: my_base64.c
components/my_base64/include/: my_base64.h
components/ota/: CMakeLists.txt  ota.c
components/tcp_bsp/: tcp_bsp.c
components/tcp_bsp/include/: tcp_bsp.h
components/user_keydriver/: CMakeLists.txt  user_app.c  user_key.c
components/user_keydriver/include/: user_key.h
main/: CMakeLists.txt  main.c
